--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "express": "~4.7.2",
-    "morgan": "~1.2.2",
     "body-parser": "~1.5.2",
+    "express": "~4.7.2",
     "jsonwebtoken": "^5.0.2",
-    "method-override": "~2.1.2"
+    "method-override": "~2.1.2",
+    "morgan": "~1.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
